// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linefeedTreatment renders 0 1`] = `
Array [
  .c0 {
  linefeed-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders function 1`] = `
Array [
  .c0 {
  linefeed-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: has;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: has;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders invalid theme path 1`] = `
Array [
  .c0 {
  linefeed-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders negative number 1`] = `
Array [
  .c0 {
  linefeed-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  linefeed-treatment: July;
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: July;
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    linefeed-treatment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    linefeed-treatment: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  linefeed-treatment: July;
}

@media May {
  .c0 {
    linefeed-treatment: August;
  }
}

@media April {
  .c0 {
    linefeed-treatment: September;
  }
}

@media January {
  .c0 {
    linefeed-treatment: November;
  }
}

@media April {
  .c0 {
    linefeed-treatment: August;
  }
}

@media June {
  .c0 {
    linefeed-treatment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: July;
}

@media May {
  .c0 {
    linefeed-treatment: August;
  }
}

@media April {
  .c0 {
    linefeed-treatment: September;
  }
}

@media January {
  .c0 {
    linefeed-treatment: November;
  }
}

@media April {
  .c0 {
    linefeed-treatment: August;
  }
}

@media June {
  .c0 {
    linefeed-treatment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    linefeed-treatment: November;
  }
}

@media April {
  .c0 {
    linefeed-treatment: January;
  }
}

@media January {
  .c0 {
    linefeed-treatment: December;
  }
}

@media April {
  .c0 {
    linefeed-treatment: April;
  }
}

@media June {
  .c0 {
    linefeed-treatment: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    linefeed-treatment: November;
  }
}

@media April {
  .c0 {
    linefeed-treatment: January;
  }
}

@media January {
  .c0 {
    linefeed-treatment: December;
  }
}

@media April {
  .c0 {
    linefeed-treatment: April;
  }
}

@media June {
  .c0 {
    linefeed-treatment: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    linefeed-treatment: July;
  }
}

@media April {
  .c0 {
    linefeed-treatment: August;
  }
}

@media January {
  .c0 {
    linefeed-treatment: September;
  }
}

@media April {
  .c0 {
    linefeed-treatment: November;
  }
}

@media June {
  .c0 {
    linefeed-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    linefeed-treatment: July;
  }
}

@media April {
  .c0 {
    linefeed-treatment: August;
  }
}

@media January {
  .c0 {
    linefeed-treatment: September;
  }
}

@media April {
  .c0 {
    linefeed-treatment: November;
  }
}

@media June {
  .c0 {
    linefeed-treatment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    linefeed-treatment: January;
  }
}

@media April {
  .c0 {
    linefeed-treatment: December;
  }
}

@media January {
  .c0 {
    linefeed-treatment: April;
  }
}

@media April {
  .c0 {
    linefeed-treatment: May;
  }
}

@media June {
  .c0 {
    linefeed-treatment: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    linefeed-treatment: January;
  }
}

@media April {
  .c0 {
    linefeed-treatment: December;
  }
}

@media January {
  .c0 {
    linefeed-treatment: April;
  }
}

@media April {
  .c0 {
    linefeed-treatment: May;
  }
}

@media June {
  .c0 {
    linefeed-treatment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders postitive number 1`] = `
Array [
  .c0 {
  linefeed-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders string 1`] = `
Array [
  .c0 {
  linefeed-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: July;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: June;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: June;
}

<div
    className="c0"
  />,
]
`;

exports[`linefeedTreatment renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`linefeedTreatment renders valid theme path 1`] = `
Array [
  .c0 {
  linefeed-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  linefeed-treatment: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
